--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
         <div id="vid-cont">
             <video autoplay muted loop id="vid">
-                <source src="C:\Users\jaypa\sei\labs\Portfolio\images\earthvid.mp4" type="video/mp4">
+                <source src="images/earthvid.mp4" type="video/mp4">
             </video>
         </div>
 
@@ -46,19 +46,19 @@
         </div>
 
         <div id="pic">
-            <img src="C:\Users\jaypa\sei\labs\Portfolio\images\profilepic.jpg" alt="Jay's profile pic"/>
+            <img src="images/profilepic.jpg" alt="Jay's profile pic"/>
         </div>
 
         <div id="border1"></div>
 
         <div class="front-endbox">
             <h2 class="endwork">Front-End</h2>
-            <img id="front-end" src="C:\Users\jaypa\sei\labs\Portfolio\images\frontend.jpg" alt="picture of a laptop"/>
+            <img id="front-end" src="images/frontend.jpg" alt="picture of a laptop"/>
         </div>
 
         <div class="back-endbox">
             <h2 class="endwork">Back-End</h2>
-            <img id="back-end" src="C:\Users\jaypa\sei\labs\Portfolio\images\pic1.png" alt="war-room" />
+            <img id="back-end" src="images/pic1.png" alt="war-room" />
         </div>
 
         <div id="contact"></div>
